--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -14,7 +14,7 @@
 <!--NavBar-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#" th:href="@{/}">Smart Contact Manager</a>
+        <a class="navbar-brand" href="#" th:href="@{/}">Cloud Contact</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
