--- a/src/main/resources/templates/normal/base.html
+++ b/src/main/resources/templates/normal/base.html
@@ -20,7 +20,7 @@
 <!--NavBar-->
 <nav class="fixed-top navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#" th:href="@{/user/index}">Smart Contact Manager</a>
+        <a class="navbar-brand" href="#" th:href="@{/user/index}">Cloud Contact</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
