--- a/src/main/resources/templates/normal/show_contacts.html
+++ b/src/main/resources/templates/normal/show_contacts.html
@@ -56,34 +56,36 @@
                     </table>
                 </div>
                 <!--Pagination-->
-                <nav aria-label="Page navigation example">
-                    <ul class="pagination">
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination">
 
-                        <li th:if="${currentPage!=0}" class="page-item">
-                            <a class="page-link" href="#"
-                               th:href="@{'/user/show-contacts/'+${currentPage-1}}">Previous</a>
-                        </li>
+                            <li th:if="${currentPage!=0}" class="page-item">
+                                <a class="page-link" href="#"
+                                   th:href="@{'/user/show-contacts/'+${currentPage-1}}">Previous</a>
+                            </li>
 
-                        <li th:each="i : ${#numbers.sequence(1,totalPages)}"
-                            th:classappend="${currentPage+1==i?'active':''}" th:class="page-item">
+                            <li th:if="${totalPages}" th:each="i : ${#numbers.sequence(1,totalPages)}"
+                                th:classappend="${currentPage+1==i?'active':''}" th:class="page-item">
 
-                            <a class="page-link" href="#" th:href="@{'/user/show-contacts/'+${i-1}}">
-                                <span th:text="${i}"></span>
-                            </a>
-                        </li>
+                                <a class="page-link" href="#" th:href="@{'/user/show-contacts/'+${i-1}}">
+                                    <span th:text="${i}"></span>
+                                </a>
+                            </li>
 
-                        <li th:if="${currentPage+1!=totalPages}" class="page-item">
-                            <a class="page-link" href="#" th:href="@{'/user/show-contacts/'+${currentPage+1}}">Next</a>
-                        </li>
+                            <li th:if="${currentPage+1!=totalPages}" class="page-item">
+                                <a class="page-link" href="#"
+                                   th:href="@{'/user/show-contacts/'+${currentPage+1}}">Next</a>
+                            </li>
 
-                    </ul>
-                </nav>
+                        </ul>
+                    </nav>
+                <!-- End pagination-->
 
             </div>
         </div>
     </div>
     <script>
-        $(document).ready(()=>{
+        $(document).ready(() => {
             $(".item").removeClass("active");
             $("#contacts-link").addClass("active");
         });
