--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -14,7 +14,7 @@
 
                         <form id="login-form" class="form" th:action="@{/dologin}" action="#" method="post">
 
-                            <h3 class="text-center text-info">Login</h3>
+                            <h3 class="text-center text-primary">Login</h3>
 
                             <div th:if="${param.error}" class="alert alert-danger">
                                 Invalid UserName and Password
@@ -29,12 +29,12 @@
 
 
                             <div class="form-group">
-                                <label for="username" class="text-info">Username</label><br>
+                                <label for="username" class="text-primary">Username</label><br>
                                 <input type="text" name="username" id="username" class="form-control" placeholder="Email">
                             </div>
 
                             <div class="form-group">
-                                <label for="password" class="text-info">Password:</label><br>
+                                <label for="password" class="text-primary">Password:</label><br>
                                 <input type="password" name="password" id="password" class="form-control" placeholder="Password">
                             </div>
 
