--- a/src/main/resources/templates/normal/add_contact_form.html
+++ b/src/main/resources/templates/normal/add_contact_form.html
@@ -12,7 +12,7 @@
             <h1 class="text-center">Add Contact</h1>
             <div class="container-fluid mt-1">
                 <div class="row">
-                    <div class="col-md-10 offset-md-1">
+                    <div class="col-md">
 
                         <form action="" th:object="${contact}" enctype="multipart/form-data"
                               th:action="@{/user/process-contact}" method="post" class="mt-2">
