--- a/src/main/resources/templates/normal/profile.html
+++ b/src/main/resources/templates/normal/profile.html
@@ -14,9 +14,9 @@
                     <img alt="Profile Photo" style="width: 200px; height: 200px;" class="my_profile_picture" src=""
                          th:src="@{'/img/'+${user.imageUrl}}">
                 </div>
-                <div class="d-flex justify-content-between">
-                 <h1 class="text-center mt-3" th:text="${user.name}"></h1>
-                <a  href="#" th:href="@{/user/add-contact}" class="item"> <i class="fa-solid fa-pen"></i>Edit Profile</a>
+                <div class="text-center">
+                 <h2 class="mt-3" th:text="${user.name}"></h2>
+<!--                <a  href="#" th:href="@{/user/add-contact}" class="item"> <i class="fa-solid fa-pen"></i>Edit Profile</a>-->
                 </div>
                 <div class="table-responsive">
                     <table class="table text-center">
